use new Java 21 features in test code